fixed recipe card button spacing

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -97,10 +97,9 @@ body {
 	.recipeCardButtons {
 		display: flex;
 		justify-content: space-around;
+		margin: 0px 40px;
 		// position: absolute;
 		// bottom: 10px;
-		// right: 20%;
-		// left: 20%;
 	}
 
 	.editButton {
